Process_Management/force-app/main/default/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date_In_Date__c</fullName>
        <formula>DATEVALUE(Due_Date__c)</formula>
        <label>Due Date In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_To_Change__c</fullName>
        <label>Due Date To Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Previous Jobs</relationshipLabel>
        <relationshipName>PreviousJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Next_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Next Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Jobs (Second Next Job)</relationshipLabel>
        <relationshipName>PrevJob</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <referenceTo>Stream__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Planned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Planned (h)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Spent (h)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JOB01_CantChangeToDoneIfTimeIsntLogged</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				ISPICKVAL(Status__c,
														&apos;DONE&apos;
														),
				ISBLANK(Time_Spent__c)
)</errorConditionFormula>
        <errorDisplayField>Time_Spent__c</errorDisplayField>
        <errorMessage>You can&apos;t step to &apos;DONE&apos; if there is no time logged.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JOB02_CantReportTimeBelowZero</fullName>
        <active>true</active>
        <errorConditionFormula>Time_Spent__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Time_Spent__c</errorDisplayField>
        <errorMessage>Can not report time below zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JOB03_CantLogTimeForToDoJobs</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  AND(
   NOT(ISCHANGED(Status__c)),
   ISCHANGED(Time_Spent__c),
   NOT(ISPICKVAL(Status__c, &apos;IN PROGRESS&apos;))
  ),
  AND(
   ISCHANGED(Status__c),
   ISCHANGED(Time_Spent__c),
   ISPICKVAL(Status__c, &apos;TO DO&apos;)
  ),
  AND(
   ISNEW(),
   Time_Spent__c &lt;&gt; 0,
   ISPICKVAL(Status__c, &apos;TO DO&apos;)
  )
)</errorConditionFormula>
        <errorDisplayField>Time_Spent__c</errorDisplayField>
        <errorMessage>You can&apos;t log time if task is not in &apos;IN PROGRESS&apos; Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JOB04_CantModifyIfNotOwner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Profile.Name = &quot;Process Management Employee&quot;,
  Assigned_To__c &lt;&gt; $User.Id
)</errorConditionFormula>
        <errorMessage>You can&apos;t edit Job which is not yours.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JOB05_CantChangeDueDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name = &quot;Process Management Employee&quot;, 
NOT(ISNEW()),
				ISCHANGED(Due_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>You can&apos;t change Due Date, submit Due Date change via manager approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JOB06_TimeHasToBePlannedOnTODO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
	ISCHANGED(Time_Planned__c),
	ISPICKVAL(Status__c, &apos;TO DO&apos;)
)</errorConditionFormula>
        <errorDisplayField>Time_Planned__c</errorDisplayField>
        <errorMessage>Time has to be planned on &apos;TO DO&apos; Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JOB07_CantReportTimeIfAssignedToNull</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
	ISCHANGED(Time_Spent__c),
	Assigned_To__c = null
),
AND(
	ISNEW(),
	Time_Spent__c &lt;&gt; 0,
	Assigned_To__c = null
))</errorConditionFormula>
        <errorMessage>You can&apos;t log time if job does not have assigned person.</errorMessage>
    </validationRules>
</CustomObject>